Parse dynamic view of the web
